
6.13.08 (Not released yet).
Nothing

6.13.07: (Not released yet).
[FIXED]Now Titanium Niobium Carbide Steam Turbine Main Housing has the correct crafting recipe.
[FIXED]The tooltip of the Mask Aligner has been fixed. The input should be from bottom layer and the output otherwise.
[FIXED]The tooltip of the Large Molecular Scanner has been fixed. The structure should not be filled with air.
[CHANGED]Aligner Units and Mask Aligner crafting recipes.
[CHANGED]Now Circuit Wiring (Platinum) are made in Mask Aligner.
[CHANGED]Now Fluid Solidifiers accept CU instead of EU.
[CHANGED]Some recipes are now processed in heat mixers instead of mixers.
[CHANGED]Partcile Collider now has completely different structure.
[ADDED]Heat Mixers (T1-T5)
[WIP]Polytetrafluoroethylene drums and pipes.

6.13.06:
[CHANGED]You can no longer Put dust into Extruder
[CHANGED]Assembler-Circuit Assembler.It should be different from Welder
[ADDED]More organic fluids
Dichloroisopropanol
Cumene
Silane
Allyl Chloride
Acrylic Acid
Ethyl Acrylate
Styrene
Vinyl Chloride
Ethyne
Photoresist
[ADDED]
Mask Aligner. A more powerful and precise machine to align nano-scale patterns on wafers.
Built from Stainless Steel Walls and Aligner Units, its purpose will be added in the future.
[ADDED]Aligner Units used to build Mask Aligner

6.13.05:
[FIXED]Some Recipe conflict
[ADDED]Process of Isoprene, which produces Rubber chemically.

6.13.04: 
[FIXED]DistillationTower does not output lubricant.
[FIXED]DistillationTower recipe does not have recipe output Gasoil With Sulfur
[CHANGED]Copper and Cassiterite now can Worldgen in Stone Layer.
[CHANGED]Particle Collider now needs minimum 20 particle in the input slot to operate.
[CHANGED]Some recipes of the Particle Collider to adjust the previous change.
[ADDED]IV Battery(8192EU/t)
[ADDED]Electrical Proof Machine Casing.
[ADDED]Recipes of ionized gas now are added.
[ADDED]Multiblock Large Roasting Oven.
[ADDED]Single block gas turbines.
[ADDED]
Multiblock Ionizer.